# unity_metadata_loader

./: .gitignore  README.md  unity_decoder.sln  unity_loader.py  unity_loader2.py
unity_decoder/libil2cpp/: CMakeLists.txt  UnityAdsStubs.cpp  blob.h  char-conversions.cpp  char-conversions.h  class-internals.cpp  class-internals.h  icallincludes.h  il2cpp-api-types.h  il2cpp-api.cpp  il2cpp-api.h  il2cpp-config.h  il2cpp-debugger.cpp  il2cpp-debugger.h  il2cpp-metadata.h  il2cpp-string-types.h  il2cpp-vm-support.h  libil2cpp.def  libil2cpp.icalls  libil2cpp.vcxproj  libil2cpp.vcxproj.filters  metadata.h  mono-structs.cpp  mono-structs.h  normalization-tables.h  number-formatter.h  object-internals.h  tabledefs.h  types.h
unity_decoder/libil2cpp/codegen/: il2cpp-codegen-common.h  il2cpp-codegen-il2cpp.h  il2cpp-codegen-mono.h  il2cpp-codegen.h
unity_decoder/libil2cpp/debugger/: agent.cpp  agent.h  command-line-parser.cpp  command-line-parser.h  common.h  data-buffer.cpp  data-buffer.h  event-request.cpp  event-request.h  id-bank.h  id-brank.cpp  il2cpp-api-test-forwarder.cpp  il2cpp-api-test-forwarder.h  meta.h  thread-data.cpp  thread-data.h  transport-tcp.cpp  transport-tcp.h  transport.h  variant.cpp  variant.h
unity_decoder/libil2cpp/gc/: Allocator.h  AppendOnlyGCHashMap.h  BoehmGC.cpp  GCHandle.cpp  GCHandle.h  GarbageCollector.cpp  GarbageCollector.h  NullGC.cpp  WriteBarrier.cpp  WriteBarrier.h  gc_wrapper.h
unity_decoder/libil2cpp/metadata/: ArrayMetadata.cpp  ArrayMetadata.h  FieldLayout.cpp  FieldLayout.h  GenericMetadata.cpp  GenericMetadata.h  (+37 more)
(+694 files in other folders)
